src/test/ui/associated-consts/issue-24949-assoc-const-static-recursion-impl.stderr
error[E0391]: cycle detected when const checking `IMPL_REF_BAR`
  --> $DIR/issue-24949-assoc-const-static-recursion-impl.rs:7:27
   |
LL | const IMPL_REF_BAR: u32 = GlobalImplRef::BAR;
   |                           ^^^^^^^^^^^^^^^^^^
   |
note: ...which requires const checking `<impl at $DIR/issue-24949-assoc-const-static-recursion-impl.rs:11:1: 13:2>::BAR`...
  --> $DIR/issue-24949-assoc-const-static-recursion-impl.rs:12:22
   |
LL |     const BAR: u32 = IMPL_REF_BAR;
   |                      ^^^^^^^^^^^^
   = note: ...which again requires const checking `IMPL_REF_BAR`, completing the cycle
note: cycle used when processing `IMPL_REF_BAR`
  --> $DIR/issue-24949-assoc-const-static-recursion-impl.rs:7:1
   |
LL | const IMPL_REF_BAR: u32 = GlobalImplRef::BAR;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
